--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,9 @@
 [build]
   command = "npm run build"
   publish = "build"
+
+[context.production]
+  environment = { NODE_ENV = '16.15.0'}
+
+[dev]
+  command = 'svelte-kit dev'
