--- a/netlify.toml
+++ b/netlify.toml
@@ -7,3 +7,15 @@
 
 [dev]
   command = 'svelte-kit dev'
+
+[[headers]]
+  for = "/*.woff"
+  [headers.values]
+    Access-Control-Allow-Origin = "*"
+    Content-Type = "application/font-woff"
+
+[[headers]]
+  for = "/*.woff2"
+  [headers.values]
+    Access-Control-Allow-Origin = "*"
+    Content-Type = "application/font-woff2"
