--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,22 @@
 {
+  "semi": false,
+  "useTabs": true,
+  "tabWidth": 4,
   "singleQuote": true,
   "trailingComma": "none",
-  "tabWidth": 4
+  "printWidth": 100,
+  "plugins": [
+    "prettier-plugin-svelte"
+  ],
+  "pluginSearchDirs": [
+    "."
+  ],
+  "overrides": [
+    {
+      "files": "*.svelte",
+      "options": {
+        "parser": "svelte"
+      }
+    }
+  ]
 }
