--- a/package.json
+++ b/package.json
@@ -12,37 +12,38 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-vercel": "^2.2.0",
-		"@sveltejs/kit": "^1.5.0",
+		"@sveltejs/adapter-vercel": "^2.4.3",
+		"@sveltejs/kit": "^1.22.0",
 		"@tailwindcss/forms": "^0.5.3",
 		"@tailwindcss/typography": "^0.5.9",
-		"@typescript-eslint/eslint-plugin": "^5.45.0",
-		"@typescript-eslint/parser": "^5.45.0",
+		"@typescript-eslint/eslint-plugin": "^5.61.0",
+		"@typescript-eslint/parser": "^5.61.0",
 		"autoprefixer": "^10.4.14",
-		"daisyui": "^2.51.6",
-		"eslint": "^8.28.0",
-		"eslint-config-prettier": "^8.5.0",
+		"daisyui": "^3.1.9",
+		"eslint": "^8.44.0",
+		"eslint-config-prettier": "^8.8.0",
 		"eslint-plugin-svelte3": "^4.0.0",
 		"mdsvex": "^0.10.6",
-		"postcss": "^8.4.23",
+		"postcss": "^8.4.24",
 		"postcss-load-config": "^4.0.1",
-		"prettier": "^2.8.0",
-		"prettier-plugin-svelte": "^2.8.1",
-		"svelte": "^3.54.0",
-		"svelte-check": "^3.0.1",
-		"svelte-preprocess": "^5.0.3",
-		"tailwindcss": "^3.3.1",
-		"tslib": "^2.4.1",
-		"typescript": "^5.0.0",
-		"vite": "^4.2.0"
+		"prettier": "^2.8.8",
+		"prettier-plugin-svelte": "^2.10.1",
+		"svelte": "^3.59.2",
+		"svelte-check": "^3.4.4",
+		"svelte-preprocess": "^5.0.4",
+		"tailwindcss": "^3.3.2",
+		"tslib": "^2.6.0",
+		"typescript": "^5.1.6",
+		"vite": "^4.3.9"
 	},
 	"dependencies": {
 		"@fontsource/jetbrains-mono": "^4.5.12",
 		"lucide-svelte": "^0.162.0",
-		"open-props": "^1.5.7",
+		"open-props": "^1.5.10",
 		"rehype-slug": "^5.1.0",
 		"remark-toc": "^8.0.1",
 		"remark-unwrap-images": "^3.0.1",
-		"shiki": "^0.14.1"
+		"shiki": "^0.14.3",
+		"svelte-intersection-observer": "^0.10.0"
 	}
 }
