--- a/src/posts/.zk/config.toml
+++ b/src/posts/.zk/config.toml
@@ -59,24 +59,14 @@ template = "default.md"
 #key = "value"
 
 
-# GROUP OVERRIDES
-#
-# You can override global settings from [note] and [extra] for a particular
-# group of notes by declaring a [group."<name>"] section.
-#
-# Specify the list of directories which will automatically belong to the group
-# with the optional `paths` property.
-#
-# Omitting `paths` is equivalent to providing a single path equal to the name of
-# the group. This can be useful to quickly declare a group by the name of the
-# directory it applies to.
+[group.daily]
+paths = ["diary"]
 
-#[group."<NAME>"]
-#paths = ["<DIR1>", "<DIR2>"]
-#[group."<NAME>".note]
-#filename = "{{format-date now}}"
-#[group."<NAME>".extra]
-#key = "value"
+[group.daily.note]
+# %Y-%m-%d is actually the default format, so you could use {{format-date now}} instead.
+filename = "{{format-date now '%Y-%m-%d'}}"
+extension = "md"
+template = "daily.md"
 
 
 # MARKDOWN SETTINGS
